grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana.veronez.net
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana-service
          servicePort: 3000
